--- a/proyecto_final/reporte/informe_ref.bib
+++ b/proyecto_final/reporte/informe_ref.bib
@@ -109,7 +109,7 @@
 }
 
 @ARTICLE{Sayidmarie,
-  author = {Sayidmarie O., Tokhi M., Almeshal A., Agouri S. },
+  author = {Sayidmarie O. Yokhi M., Almeshal A. y Agouri S. },
   title = {Design and Real-time Implementation Of a Fuzzy Logic Control System For a Two-Wheeled Robot},
   journal = {Methods and Models in Automation and Robotics},
   year = {2012},
@@ -152,6 +152,14 @@
   timestamp = {2013.03.04}
 }
 
+@BOOK{Buck,
+  title = {Advanced Calculus},
+  publisher = {Waveland Press Long Grove, Illinois},
+  year = {2003},
+  author = {R. Creighton Buck},
+  owner = {Buck},
+  timestamp = {2003}
+}
 
 @comment{jabref-meta: selector_publisher:}
 
