--- a/proyecto_final/reporte/avance.tex
+++ b/proyecto_final/reporte/avance.tex
@@ -122,6 +122,15 @@ Estos robots tienen 3 grados de libertad. Estos son: traslación hacia adelante o
 
 Se debe notar que para que el sistema sea estable , se necesitan al menos tres puntos de apollo \citep{KarlStol}. La mayor propiedad de este sistema es que se considera dinámicamente estable \citep{Yan-Hou} o estáticamente inestable \citep{KarlStol}, esto porque el sistema es inestable entonces se debe tener un controlador activo para mantenerlo cerca de un punto de operación, y evitar que se caiga.
 
+\subsection{Importancia}
+
+El desarrollo de robots móviles responde a la necesidad de extender el campo de aplicación de la Robótica. Se trata también de incrementar la autonomía misma del robot limitando todo lo posible la intervención humana.\\
+En particular los robots de dos ruedas tienen la ventaja de que son altamente maniobrables al poder girar sobre su propio eje y pueden llegar a ser muy altos sin necesidad de una base muy grande, lo que los hace muy útiles en interiores ya que pueden pasar por lugares estrechos y dar curvas muy cerradas.\citep{KarlStol}. Algunas de estas aplicaciones pueden ser como guías de excursiones dentro de museos,bases de equipo médico dentro de hospitales, para vigilancia (segway) y de limpieza en el hogar \citep{Coelho} \\
+
+Aplicaciones de los péndulos invertidos se pueden ver en campos como por ejemplo aeroespacial, el cual requiere el control activo de un cohete para mantenerlo en la posición vertical invertida durante su despegue.  Aquí, el ángulo de inclinación del cohete es controlado por medio de la variación del ángulo de la aplicación de la fuerza de empuje, colocada en la base de dicho cohete. En Biomecánica  el péndulo invertido es frecuentemente utilizado para modelar bípedos caminantes.  En los robots bípedos la pierna de apoyo en contacto con el suelo a menudo se modela como un péndulo invertido, mientras que la pierna en movimiento se comporta como un péndulo que oscila libremente, suspendido de la cadera del humanoide. \citep{Cruz}
+
+
+
 
 \subsection{Consideraciones Iniciales}
 El objetivo de estos sistemas es evitar que caigan, entonces la salida se toma como el ángulo respecto a la normal con el suelo. Es decir, la salida es el ángulo pitch. Por otra parte, la entrada son los torques que actúan sobre el cuerpo. El torque que provoca la gravedad puede no ser conciderado como una entrada, pero el torqeu de las ruedas y el torque de perturbaciones externas (como empujar al robot), sí son entradas. 
