--- a/proyecto_final/reporte/avance.tex
+++ b/proyecto_final/reporte/avance.tex
@@ -124,10 +124,10 @@ Se debe notar que para que el sistema sea estable , se necesitan al menos tres p
 
 \subsection{Importancia}
 
-El desarrollo de robots móviles responde a la necesidad de extender el campo de aplicación de la Robótica. Se trata también de incrementar la autonomía misma del robot limitando todo lo posible la intervención humana.\\
+El desarrollo de robots móviles responde a la necesidad de extender el campo de aplicación de la Robótica. Se trata también de incrementar la autonomía misma del robot limitando todo lo posible la intervención humana. \citep{Collazo}\\
 En particular los robots de dos ruedas tienen la ventaja de que son altamente maniobrables al poder girar sobre su propio eje y pueden llegar a ser muy altos sin necesidad de una base muy grande, lo que los hace muy útiles en interiores ya que pueden pasar por lugares estrechos y dar curvas muy cerradas.\citep{KarlStol}. Algunas de estas aplicaciones pueden ser como guías de excursiones dentro de museos,bases de equipo médico dentro de hospitales, para vigilancia (segway) y de limpieza en el hogar \citep{Coelho} \\
 
-Aplicaciones de los péndulos invertidos se pueden ver en campos como por ejemplo aeroespacial, el cual requiere el control activo de un cohete para mantenerlo en la posición vertical invertida durante su despegue.  Aquí, el ángulo de inclinación del cohete es controlado por medio de la variación del ángulo de la aplicación de la fuerza de empuje, colocada en la base de dicho cohete. En Biomecánica  el péndulo invertido es frecuentemente utilizado para modelar bípedos caminantes.  En los robots bípedos la pierna de apoyo en contacto con el suelo a menudo se modela como un péndulo invertido, mientras que la pierna en movimiento se comporta como un péndulo que oscila libremente, suspendido de la cadera del humanoide. \citep{Cruz}
+Las aplicaciones de los péndulos invertidos se pueden ver en campos como por ejemplo aeroespacial, el cual requiere el control activo de un cohete para mantenerlo en la posición vertical invertida durante su despegue.  Aquí, el ángulo de inclinación del cohete es controlado por medio de la variación del ángulo de la aplicación de la fuerza de empuje, colocada en la base de dicho cohete. En Biomecánica  el péndulo invertido es frecuentemente utilizado para modelar bípedos caminantes.  En los robots bípedos la pierna de apoyo en contacto con el suelo a menudo se modela como un péndulo invertido, mientras que la pierna en movimiento se comporta como un péndulo que oscila libremente, suspendido de la cadera del humanoide. \citep{Cruz}
 
 
 
