--- a/proyecto_final/reporte/informe_ref.bib
+++ b/proyecto_final/reporte/informe_ref.bib
@@ -152,6 +152,27 @@
   timestamp = {2013.03.04}
 }
 
+@ARTICLE{Cruz,
+  author = {Cruz M., Marquez C., Silva R. y Merlo C.},
+  title = {Sistemas mecánicos subactuados:péndulos invertidos},
+  journal = {Boletín UPIITA},
+  year = {2014},
+  volume = {41},
+  url = "http://www.boletin.upiita.ipn.mx/index.php/ciencia/553-cyt-numero-41/840-sistemas-mecanicos-subactuados-pendulos-invertidos1",
+  note = "Consultado el 14 de mayo del 2016",
+timestamp = {2014.01.01}
+}
+
+@ARTICLE{Collazo,
+  author = {Collazo J. , Gorrostieta E. , Pedraza J. y Villaseñor U. y Romero R. y González M. },
+  title = {Modelación de un Robot Móvil de Dos Ruedas con
+Tracción Diferencia},
+  year = {2009},
+  url = "http://www.mecamex.net/anterior/cong08/articulos/58.pdf",
+  note = "Consultado el 14 de mayo del 2016",
+timestamp = {2009.11.26}
+}
+
 @BOOK{Buck,
   title = {Advanced Calculus},
   publisher = {Waveland Press Long Grove, Illinois},
