--- a/proyecto_final/reporte/avance.tex
+++ b/proyecto_final/reporte/avance.tex
@@ -169,7 +169,7 @@ activo para mantener al sistema cerca de un punto de operación, y así evitar que
 \subsection{Método de linealización}
 Los sistemas en estudio son intrínsicamente no lineales \citep{Sayidmarie}. De esta manera, para
 facilitar el análisis se puede considerar el sistema alrededor de un punto de operación específico,
-en donde el el mismo puede considerarse como lineal. En el caso específico del sistema a analizar,
+en donde el mismo puede considerarse como lineal. En el caso específico del sistema a analizar,
 si se denomina $\phi$ cómo el ángulo de pitch, ya que el interés es mantener al robot en posición
 vertical, se puede tomar como punto de operación la condición de $\phi=0$
 
