--- a/proyecto_final/reporte/avance.tex
+++ b/proyecto_final/reporte/avance.tex
@@ -124,7 +124,7 @@ hogar \citep{Coelho}.
 El sistema que se estudia son los robots de dos ruedas coaxiales, encontrándose normalmente una a
 cada lado del cuerpo, con el centro de masa sobre el eje de las ruedas. Debido a que el centro de
 masa se encuentra sobre el eje de las ruedas, estos robots también son conocidos como péndulos
-invertidos móbiles \citep{Yan-Hou}, ya que su base no está fija en el espacio, sino que puede
+invertidos móviles \citep{Yan-Hou}, ya que su base no está fija en el espacio, sino que puede
 desplazarse sobre una superficie debido a la acción de las ruedas (ver figura
 \ref{fig:segway_robot}).
 
@@ -171,9 +171,9 @@ Los sistemas en estudio son intrínsicamente no lineales \citep{Sayidmarie}. De e
 facilitar el análisis se puede considerar el sistema alrededor de un punto de operación específico,
 en donde el mismo puede considerarse como lineal. En el caso específico del sistema a analizar,
 si se denomina $\phi$ cómo el ángulo de pitch, ya que el interés es mantener al robot en posición
-vertical, se puede tomar como punto de operación la condición de $\phi=0$
+vertical, se puede tomar como punto de operación la condición de $\phi=0$.
 
-En general, se tiene que el modelo en variables de estado de un sistema no lineal viene dada por la
+En general, se tiene que el modelo en variables de estado de un sistema no lineal viene dado por la
 ecuación \ref{eq:estados_no_lineal}:
 
 \begin{equation}
