Correcion del jacobiano

--- a/proyecto_final/reporte/avance.tex
+++ b/proyecto_final/reporte/avance.tex
@@ -200,7 +200,7 @@ $\mathbf{u'}(t)=\mathbf{u}(t)-\mathbf{u}(0)$. Despejando $f$ de la ecuación \ref
 sustituyendo \ref{eq:estados_no_lineal}, se obtiene la ecuación \ref{eq:meantheo}:
 
 \begin{equation}
-\frac{dx'(t)}{dt}=J_{f_x}\mathbf{x'}(t)+J_{f_u}\mathbf{u'}(t)
+\frac{dx'(t)}{dt}=J_{f_x}|_0\mathbf{x'}(t)+J_{f_u}|_0\mathbf{u'}(t)
 \label{eq:meantheo}
 \end{equation}
 
